style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root{
    --orange-color:#F79E1B;
    --black-color:#373737;
    --white-color:#FFFFFF;
    --ff-poppins:"Poppins", sans-serif;
    --ff-inter: "Inter", sans-serif;
}



/* Navbar */
.navbar{
    font-family: var(--ff-poppins);
    font-weight: 500;
    font-size: 16px;
}
.nav-link{
    color: var(--black-color);
}

.sign-up-btn{
    background-color: var(--orange-color);
    border: none;
 color: var(--white-color);
 padding: 11px 21px;
 border-radius: 10px;
}
.navbar-nav {
    display: flex;
    gap: 20px;
}
.navbar-nav a:hover{
    color: var(--orange-color);
}

/* header-hero */
/* Section 1 */

.header-section-1{
    height: 92vh;
background-image: url("assests/Hero.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
 
.header-section-1 h2 {
color: white;
font-size: 50px;
font-family: var(--ff-poppins);
font-weight: 600;
padding-bottom: 1rem;
}

.header-section-1 p{
color: white;
font-family: var(--ff-poppins);
width: 42rem;
}

.header-section-1 button {
background-color: #F79E1B;
color: white;
width: 10rem;
padding: 1rem;
border-radius: 8px;
border: none;
}



/* tablet screen */
@media (min-width: 500px) and (max-width: 980px) {
    /* Navbar */
.navbar-nav {
    gap: 5px;
}
.navbar-nav a:hover{
    color:var(--black-color);
}

    /* header-hero */
    .header-section-1 h2 {
text-align: center;
}

.header-section-1 p{
text-align: center;
}

.header-section-1 button{
margin-left: 16rem;
}
}

/* mobile screen */
@media (max-width: 500px) {
 /* Navbar */
.navbar-nav {
    gap: 1px;
}
.navbar-nav a:hover{
    color:var(--black-color);
}

    /* header-hero */
    .header-section-1 h2 {
        font-size: 35px;
text-align: center;
}

.header-section-1 p{
text-align: center;
width: 100%;
}

.header-section-1 button{
margin-left: 8rem;
}
}

